Sidebar и MainContent заключены в flex контейнер AppWrap Тперь Sidebar это sticky а не fixed компонент Добавил декоративный элемент для элементов класса title-h2

--- a/src/components/mainContent/MainContent.module.scss
+++ b/src/components/mainContent/MainContent.module.scss
@@ -1,10 +1,9 @@
 .main__container {
-  margin-top: 50px;
   display: flex;
-  width: 81.5vw;
+  width: 70%;
+  margin-top: 30px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   gap: 60px;
-  margin-left: 335px;
 }
