--- a/src/components/mainContent/sections/Briefing.module.scss
+++ b/src/components/mainContent/sections/Briefing.module.scss
@@ -2,7 +2,6 @@
 
 .briefing {
   display: flex;
-  margin-right: 10%;
   padding: 30px 25px;
   justify-content: space-around;
   align-self: stretch;
