--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -8,11 +8,7 @@
   background-color: $theme-color-1;
   width: 270px;
   height: 94vh;
-  position: fixed;
-  top: 3.5vh;
-  left: 15px;
+  position: sticky;
+  top: 3vh;
   border-radius: 20px;
-  
-
-  
 }
