--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,10 @@ html {
   font-family: Inter;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
   color: inherit;
